# FCSE

APS/Laboratory Exercises/Lab 1/: PushZero.java  QuarterlySales.java  ReverseWord.java
APS/Laboratory Exercises/Lab 10/: class_Test.java
APS/Laboratory Exercises/Lab 11/: class_OrganizacijaTest.java
APS/Laboratory Exercises/Lab 2/: Array.java  ArrayMeanWordLength.java  Card.java  MysticalCardGame.java  SLL.java  SLLNode.java  SpecialSLLDelete.java
APS/Laboratory Exercises/Lab 3/: CountWordPairs.java  DLL.java  DLLBattalion.java  DLLNode.java  MiceHoles.java
APS/Laboratory Exercises/Lab 4/: class ArithmeticExpression.java  class SumOfAbsoluteDifferences.java  class ZigZagSequence.java
APS/Laboratory Exercises/Lab 5/: BubbleSortDLL.java  OddEvenSort.java  ShakerSort.java
APS/Laboratory Exercises/Lab 6/: CheckXML.java  MVR.java  PostFixEvaluation.java
APS/Laboratory Exercises/Lab 7/: Apteka.java  Lozinki.java  Preveduvac.java  RoutingHashJava.java
APS/Laboratory Exercises/Lab 8/: WindowsExplorer.java  class_BinaryTreeSum.java  class_PreorderNonRecursive.java
APS/Laboratory Exercises/Lab 9/: Main.java  class_ConsecutiveNumbers.java  class_Passenger.java
OOP/Laboratory Exercises/Lab1/: Presek_na_otsecki.c  kupuvacka_kosnicka.c  lab 2.c  struct_Course & struct_Student.c  struct_Item & struct_Shopping cart.c  struct_Laptop.c  struct_Pacient.c  struct_Proizvod.c  struct_RabotnaNedela(1).c  struct_SkiLift (2).c  struct_Skilift.c  struct_Transaction.c  struct_Vozenje.c
OOP/Laboratory Exercises/Lab10/: class_Race.cpp  class_User.cpp
OOP/Laboratory Exercises/Lab2/: 2.txt  3.txt
OOP/Laboratory Exercises/Lab3/: FoodProduct.cpp  class_InvoiceItem.cpp  class_MobilePhone.cpp  class_SpaceObject.cpp
OOP/Laboratory Exercises/Lab4/: class_DisciplinaryAction.cpp  class_Student.cpp
OOP/Laboratory Exercises/Lab5/: class_Book.cpp
OOP/Laboratory Exercises/Lab7/: class_Employee.cpp  class_Kvadrat.cpp
OOP/Laboratory Exercises/Lab8/: class_FoodItem.cpp  class_Room.cpp
OOP/Laboratory Exercises/Lab9/: class_Athlete.cpp  class_Employee.cpp
SP/Auditory Exercises/: CMakeLists.txt
SP/Auditory Exercises/av1/: plus.cpp  zad1.c  zad2.c  zad3.c  zad4.c  zad5.c  zad6.c  zad7.c  zad8.c
SP/Auditory Exercises/av2/: zad1.c  zad2.c  zad3.c  zad4.c  zad5.c  zad6.c  zad7.c  zad8.c
SP/Auditory Exercises/av3/: zad1.c  zad2.c  zad3.c  zad4.c  zad5.c  zad6.c
SP/Laboratory Exercises/: 1.c  2.c  3.c
SP/Laboratory Exercises/Lab10/: 1.c  2.c  3.c
(+30 files in other folders)
