cmake_minimum_required(VERSION 3.25)
project(Auditoriski C)

set(CMAKE_C_STANDARD 17)

add_executable(av1-1 av1/zad1.c)
add_executable(av1-2 av1/zad2.c)
add_executable(av1-3 av1/zad3.c)
add_executable(av1-4 av1/zad4.c)
add_executable(av1-5 av1/zad5.c)
add_executable(av1-6 av1/zad6.c)
add_executable(av1-7 av1/zad7.c)
add_executable(av1-8 av1/zad8.c)
add_executable(av2-1 av2/zad1.c)
add_executable(av2-2 av2/zad2.c)
add_executable(av2-3 av2/zad3.c)
add_executable(av2-4 av2/zad4.c)
add_executable(av2-5 av2/zad5.c)
add_executable(av2-6 av2/zad6.c)
add_executable(av2-7 av2/zad7.c)
add_executable(av2-8 av2/zad8.c)
add_executable(av3-1 av3/zad1.c)
add_executable(av3-2 av3/zad2.c)
add_executable(av3-3 av3/zad3.c)
add_executable(av3-4 av3/zad4.c)
add_executable(av3-5 av3/zad5.c)
add_executable(av3-6 av3/zad6.c)
add_executable(av4-1 av4/zad1.c)
add_executable(av4-2 av4/zad2.c)
add_executable(av4-3 av4/zad3.c)
add_executable(av4-4 av4/zad4.c)
add_executable(av4-5 av4/zad5.c)
add_executable(av4-6 av4/zad6.c)
add_executable(av4-7 av4/zad7.c)
add_executable(av4-8 av4/zad8.c)
add_executable(av4-9 av4/zad9.c)
add_executable(av4-10 av4/zad10.c)
add_executable(av5-1 av5/zad1.c)
add_executable(av5-2 av5/zad2.c)
add_executable(av5-3 av5/zad3.c)
add_executable(av6-1 av6/zad1.c)
add_executable(av6-2 av6/zad2.c)
add_executable(av6-3 av6/zad3.c)
add_executable(av6-4 av6/zad4.c)
add_executable(av6-5 av6/zad5.c)
add_executable(av6-6 av6/zad6.c)
add_executable(av6-7 av6/zad7.c)
add_executable(av6m1 av6-matrici/zad1.c)
add_executable(av6m2 av6-matrici/zad2.c)
add_executable(av6m3 av6-matrici/zad3.c)
add_executable(av7-1 av7/zad1.c)
add_executable(av7-2 av7/zad2.c)
add_executable(av7-3 av7/zad3.c)
add_executable(av7-4 av7/zad4.c)
add_executable(av8a-1 av8-andonov/zad1.c)
add_executable(av8a-2 av8-andonov/zad2.c)
add_executable(av8a-3 av8-andonov/zad3.c)
add_executable(av8a-4 av8-andonov/zad4.c)
add_executable(av8a-5 av8-andonov/zad5.c)
add_executable(av8a-6 av8-andonov/zad6.c)
add_executable(av8a-7 av8-andonov/zad7.c)
add_executable(av9-1 av9/zad1.c)
add_executable(av9-2 av9/zad2.c)
add_executable(av9-3 av9/zad3.c)
add_executable(av9-4 av9/zad4.c)
add_executable(av9-5 av9/zad5.c)
add_executable(av9-6 av9/zad6.c)
add_executable(av9-7 av9/zad7.c)
add_executable(av9-8 av9/zad8.c)
add_executable(av10-1 av10/zad1.c)
add_executable(av10-2 av10/zad2.c)